# televoicer

./: .env.template  .gitignore  LICENSE  README.md  manage.sh  pyproject.toml
locales/en/LC_MESSAGES/: messages.po
locales/ru/LC_MESSAGES/: messages.po
televoicer/: __main__.py  commands.py  dispatcher.py  middleware.py  models.py  utils.py
televoicer/handlers/: __init__.py  start.py  voice_template.py
televoicer/handlers/voice_template_packs/: __init__.py  add_voice.py  create.py  global_pack_list.py  import_pack.py  packs_list.py  remove_pack.py  remove_voice.py  view_pack.py
televoicer/handlers/voice_templates/: __init__.py  create.py  delete.py  run.py  show.py
tests/: test_paginator.py  test_utils.py
